discussion/kv_engine/128637/128637_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Make EPBucket::getFileStats use stats.def.h and StatCollector

Change-Id: I85e683edb403ac9a084df169396d76906791e501

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-07-16 13:43:15.000000000
Message: 
Uploaded patch set 14: Patch Set 13 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-16 14:10:55.000000000
Message: 
Patch Set 14: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3399/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:6: error: use of undeclared identifier "ep_db_data_size" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:23: error: use of undeclared identifier "bytes" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:30: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:32: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:34: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:35: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                                  ^
                                  ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3399/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3399/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1906/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25223/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
